# esp32-cpp-fw

./: .gitignore  README.md
freertos-task-templates/: freertos-task-templates.code-workspace  platformio.ini
freertos-task-templates/include/: ActiveObject.hpp  IPC.hpp  Logger.hpp  Message.hpp  MsgBroker.hpp  MsgBrokerT.hpp  PackedMessage.hpp  Publisher.hpp  Subscriber.hpp  System.hpp
freertos-task-templates/include/Services/: BLE.hpp  HardwareTimers.hpp  LEDs.hpp  LoRa.hpp  internalGPIOs.hpp
freertos-task-templates/include/Utils/: overload.hpp
freertos-task-templates/python/: bleak-test.py  requirements.txt  uart-service.py
freertos-task-templates/src/: ActiveObject.hpp  BLE.hpp  Blink.cpp  LoRa.hpp  Message.cpp  MsgBroker.cpp  MsgBrokerT.cpp  System.cpp  Task.hpp
freertos-task-templates/src/Services/: BLE.cpp  HardwareTimers.cpp  LEDs.cpp  LoRa.cpp  internalGPIOs.cpp
freertos-task-templates/text-notes/Sep2024/: note.md
zephyr-task-templates/: CMakeLists.txt  Dockerfile  EspZephyr.code-workspace  Kconfig  README.rst  prj.conf
zephyr-task-templates/boards/: esp32c3_devkitm.overlay
zephyr-task-templates/include/: ActiveObject.hpp  Sensor.hpp  System.hpp
zephyr-task-templates/include/Drivers/: BNO085.h  BleStateMachine.hpp  BuzzerDriver.hpp  EdgeImpulse.hpp  Wire.h  ble_state_machine.h  buzzer_output_drv.h
zephyr-task-templates/include/Services/: BLE.hpp  HardwareTimers.hpp  IMU.hpp  LEDs.hpp  LoRa.hpp  Sensor.hpp
zephyr-task-templates/include/Utils/: TaggedCounter.hpp
zephyr-task-templates/include/Utils/cmake/: utils.cmake
zephyr-task-templates/include/Utils/zpp/: fmt.hpp  thread_data.hpp  thread_stack.hpp
zephyr-task-templates/include/hal/: AtomicBitmask.hpp  Poll.hpp  RTOS.hpp  WQBackgroundThread.hpp
zephyr-task-templates/model-parameters/: model_metadata.h  model_variables.h
zephyr-task-templates/src/: System.cpp  main.cpp
zephyr-task-templates/src/Drivers/: BNO085.cpp  BuzzerDriver.cpp  EdgeImpulse.cpp  Wire.cpp  ble_state_machine.c  buzzer_output_drv.c  sh2.c  shtp.c
zephyr-task-templates/src/Services/: BLE.cpp  HardwareTimers.cpp  IMU.cpp  LEDs.cpp  LoRa.cpp  Sensor.cpp
zephyr-task-templates/src/hal/: RTOS.cpp
zephyr-task-templates/tflite-model/: tflite_learn_38_compiled.cpp  tflite_learn_38_compiled.h
